# uami-dros2

./: .gitignore  README.md
data/Videos de simulaciones/: videos.md
docker/: Dockerfile  Dockerfile_old  entrypoint.sh  run_docker.sh
src/: rosdep.yaml
src/my_pkg/my_custom_msgs/: CMakeLists.txt  package.xml
src/my_pkg/my_custom_msgs/action/: Navigate.action
src/my_pkg/my_custom_msgs/msg/: CustomStatus.msg
src/my_pkg/my_navigation_pkg/: CMakeLists.txt  package.xml
src/my_pkg/my_navigation_pkg/src/: navigation_node.cpp
src/my_pkg/my_node_pkg/: CMakeLists.txt  package.xml
src/my_pkg/my_node_pkg/src/: status_node.cpp
src/test_rclcpp_tf2/: CMakeLists.txt  package.xml
src/test_rclcpp_tf2/src/: test_rclcpp_tf2.cpp
src/uavs_coordinacion_cpp/: CMakeLists.txt  package.xml
src/uavs_coordinacion_cpp/src/: dron.cpp
